<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">WebsiteRating</string>
    <string name="website_rating">Website Rating</string>
    <string name="website_name">Website Name</string>
    <string name="reason_for_use">Reason For Use</string>

    <!--this is for the radio-->
    <string name="would_you">Would you...</string>
    <string name="share">Share</string>
    <string name="bookmark">Bookmark</string>
    <string name="not_visit_again">Not visit again</string>

    <string name="i_agree_to_the_privacy_policy">I agree to the privacy policy</string>
    <string name="check_the_box">Please check the box</string>
    <string name="check_box">Check the box to submit</string>
    <string name="submit">submit</string>

    <!--stuff ofr launch screen-->
    <string name="start"> Start rating </string>
    <string name="welcome">Welcome to Website Rating</string>
    <string name="message">to start press the "start Rating" button  </string>


    <plurals name="star_rating">
        <item quantity="zero">Rating: %d stars</item>
        <item quantity="one">Rating: %d stars</item>
        <item quantity="other">Rating: %d stars</item>
    </plurals>

    <string name="setting"> settings </string>
    <string name="title_activity_settings">SettingsActivity</string>


    <!-- Titles for preferences -->
    <string name="default_choice">Select the default rating</string>
    <string name="theme_choice">Dark Theme</string>

    <!-- Key name for rating preference in SharedPreferences -->
    <string name="pref_rating_key" translatable="false">rating</string>
    <string name="pref_theme_key" translatable="false">dark</string>


</resources>